# llama-wiiu.cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md
ggml/: CMakeLists.txt
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp  gguf.cpp
ggml/src/ggml-cpu/: CMakeLists.txt  ggml-cpu.c
ggml/src/ggml-cpu/arch/powerpc/: quants.c
src/: llama-model-loader.cpp
wiiu/: main.cpp  wut_shims.c
